<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/second_activity"
    tools:context=".SecondActivity">

    <TextView
        android:layout_margin="32dp"
        android:id="@+id/textSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draft_email_heading"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textSecond"
        tools:ignore="MissingConstraints">

        <EditText
            android:hint="@string/hint_email_addrs"
            android:id="@+id/email_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp" />

        <EditText
            android:hint="@string/hint_subject"
            android:id="@+id/email_subj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp" />

        <EditText
            android:hint="@string/hint_body"
            android:id="@+id/email_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_back_btn"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="432dp" />

        <Button
            android:id="@+id/buttonSecond2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/send_email_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>